--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -24,6 +24,8 @@ jobs:
 
       - run: yarn build
 
-      - run: npm publish
+      - run: |
+          npm version 0.1.${{ github.run_number }} --no-git-tag-version
+          npm publish
         if: github.ref == 'refs/heads/main'
       # - run: yarn deploy
