--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@lamsal-de/eslint-config": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
-    "eslint-config-lamsal": "romanlamsal/lamsal-node-defaults",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
