--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "Roman Lamsal <roman@lamsal.de>",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc -p tsconfig.build.json",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "@lamsal-de/eslint-config": "^1.0.4",
+    "@types/jest": "^28.1.4",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.31.0",
@@ -18,7 +21,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-unused-imports": "^1.1.2",
+    "jest": "^28.1.2",
     "prettier": "^2.4.1",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.2.4",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
